# xfce4-ddc-plugin

./: .gitignore  Makefile.am  README.md  configure.ac.in
panel-plugin/: Makefile.am  ddcdisplay.c  ddcdisplay.h  ddcplugin.c  ddcplugin.desktop.in  ddcplugin.h  ddcplugin_display.c  ddcplugin_display.h  ddcplugin_display_menuitem.glade  ddcplugin_keybind.c  ddcplugin_keybind.h  ddcplugin_panel_menu.c  ddcplugin_panel_menu.h  ddcplugin_panel_widget.c  ddcplugin_panel_widget.h  ddcplugin_settings.c  ddcplugin_settings.h  ddcplugin_settings_dialog.c  ddcplugin_settings_dialog.glade  ddcplugin_settings_dialog.h
po/: POTFILES.in
